# pico-apps

./: README.md
assignments/assign01/: assign01.S  assign01.c
assignments/assign02/: CMakeLists.txt  assign02.S  assign02.c
labs/lab01/: lab01.c
labs/lab02/: diagram.json  lab02.c
labs/lab03/: diagram.json  lab03.S
labs/lab04/: lab04_rslt.txt
labs/lab05/: lab05.S
labs/lab06/: lab06.c  lab06_rslt.txt
labs/lab07/: lab07.c  lab07_rslt.txt
labs/lab08/: CMakeLists.txt  lab08.S  lab08.c  lab08.pio  lab08_rslt.txt
